k8s/wp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector: { app: wordpress }
  ports:
    - { name: http, port: 80, targetPort: 80 }
